[package]
name = "pokerhandrange"
version = "0.1.0"
authors = ["Vladislav Supalov <v.supalov@gmail.com>"]
keywords = ["cards", "poker"]
description = "Texas Hold'em hand ranges. Tells you if two cards are in them and can be used to generate card combinations."
homepage = "https://github.com/th4t/pokerhandrange-rs"
license = "MIT"
readme = "README.md"

[lib]
name = "pokerhandrange"

#TODO: not bin?
[[bin]]
name = "rangefight"
path = "example/main.rs"

[dependencies]
rand = "0.3.8"
cards = "1.1.1"
holdem = "0.1.1"
pokereval = "0.1.1"
